# dspsim

./: .gitignore  CMakeLists.txt  dspsim.cywrk  psoc_config.yaml  pyproject.toml
.github/workflows/: build_wheels.yml
cmake/: dspsim-utils.cmake
examples/some_example/: CMakeLists.txt
psoc/: CMakeLists.txt
psoc/USBBootloader.cydsn/: USBBootloader.cyprj
psoc/USBBridge.cydsn/: FreeRTOSConfig.h  USBBridge.cyprj  booter.c  booter.h  cyapicallbacks.h  main.c  project_config.h
psoc/USBBridge.cydsn/TopDesign/: TopDesign.cysch
psoc/common/: avril.c  avril.h  cbuf.c  cobs.c  dalloc.h  dpool.c  dpool.h  iter.c  iter.h  list.c  list.h  mmi.c  mmi_iter.c  mmi_iter.h  mmi_util.h  sram.c  usb_audio_tx.c  usb_core.c  usb_serial.c  usb_serial_rx.c  usb_serial_tx.c  vmmi.c  vmmi.h  vmmi_meta.c  vmmi_meta.h
psoc/common/include/dspsim/: audio_tx.h  avril.h  cobs.h  mmi.h  mmi_iter.h  mmi_util.h  sram.h  usb.h  usb_audio_tx.h  usb_core.h  usb_serial.h  usb_serial_rx.h  usb_serial_tx.h  vmmi.h  vmmi_meta.h
psoc/tests/: CMakeLists.txt
scripts/: avril.py  bootload.py  psoc.py  tavril.py
src/: CMakeLists.txt  _framework.cpp  _library.cpp  _util.cpp  axis.cpp  clock.cpp  context.cpp  dspsim-config.cmake.in  dspsim-utils.cmake  model.cpp  signal.cpp  wishbone.cpp
src/cmake/: dspsim-config.cmake.in  dspsim-utils.cmake
src/dspsim/: __init__.py  avril.py  axis.py  config.py  cutil.py  framework.py  generate.py  library.py  main.py  psoc_creator.py  util.py  verilator.py  wishbone.py
src/dspsim/cmake/: dspsim-config.cmake
src/dspsim/hdl/: AxilRegs.sv  BramTdp.sv  Foo.sv  IIR.sv  IIRCore.sv.no  Macc.sv  Macc2.sv  MaccCore.sv  Mixer.sv  SomeModel.sv  WbBram.sv  WbRegs.sv  fir_core.sv  iir_core.sv
src/dspsim/include/dspsim/: axis.h  bindings.h  clock.h  context.h  dspsim.h  port.h  signal.h  vmodel.h  wishbone.h
src/dspsim/include/dspsim/psoc/: audio_tx.h  avril.c  avril.h  avril_defs.h  cdict_mmi.c  cdict_mmi.h  dtypes.h  error_codes.h  mmi.c  mmi.h  mmi_dtypes.h  usb_audio_tx.c  vmmi.c  vmmi_meta.c
src/dspsim/psoc/DSPSimLib.cylib/sync_counter_v1_0/: sync_counter_v1_0.cysym
src/dspsim/psoc/USBBootloader.cydsn/: USBBootloader.cyprj
src/dspsim/psoc/USBBootloader.cydsn/TopDesign/: TopDesign.cysch
src/dspsim/psoc/USBBridge.cydsn/: USBBridge.cyprj  main.c  project_config.h
src/dspsim/psoc/USBBridge.cydsn/TopDesign/: TopDesign.cysch
src/dspsim/templates/: model.cpp.jinja  module_library.cpp.jinja
src/include/dspsim/: clock.h  context.h  dspsim.h  model.h  signal.h
tests/: test_bram.py  test_config.py  test_context.py  test_framework.py  test_gain.py  test_i2s.py  test_iir.py  test_macc.py  test_mixer.py  test_package.py  test_signal.py  test_skid.py  test_some_model.py  test_verilator.py  test_wishbone.py
