[project]
name = "dspsim"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Frank" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

requires-python = ">=3.12"
dependencies = [
    "dspsim_library",
    "nanobind>=2.2.0",
    "scikit-build-core>=0.10.7",
]

[tool.uv.sources]
dspsim_library = { workspace = true }

[tool.uv.workspace]
members = ["packages/dspsim_library"]

[project.urls]
Homepage = "https://github.com/fsodari/dspsim"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "packages/dspsim/src/dspsim/__init__.py"

# Scripts.
[project.scripts]
dspsim = "dspsim.main:main"

### dspsim tool configuration ###

[tool.dspsim]
sources = ["src/dspsim/hdl/*.sv", "src/dspsim/hdl/*.v"]
# include_dirs = ["src/dspsim/hdl"] # this is already included.
# [tool.dspsim.parameters]
# DW = 32
[tool.dspsim.modules]
SomeModel = { source = "SomeModel.sv", parameters = { DW = 24 } }

###

[tool.scikit-build]
# Use the package's package config when building.
cmake.args = ["-Ddspsim_DIR=packages/dspsim/src/dspsim/cmake", "-Wno-dev"]

minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

wheel.packages = ["src/dspsim_generate", "src/dspsim"]
wheel.py-api = "cp312"


[build-system]
requires = ["scikit-build-core>=0.10.7", "nanobind>=2.2.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = ["pytest>=8.3.3"]
