[project]
name = "dspsim"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Frank" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "scikit-build-core>=0.10.7",
    # "nanobind>=2.2.0",
    "jinja2>=3.1.4",
    "numpy>=2.1.3",
    "dataclass-wizard[toml]>=0.29.3",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/fsodari/dspsim"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/dspsim/__init__.py"

# Scripts.
[project.scripts]
dspsim = "dspsim.main:main"

### dspsim tool configuration ###

[tool.dspsim]
# sources = ["src/dspsim/hdl/*.sv", "src/dspsim/hdl/*.v"]
sources = ["src/dspsim/hdl/X.sv"]
trace = "fst"

# include_dirs = ["src/dspsim/hdl"] # this is already included.
[tool.dspsim.parameters]
DW = 24
AW = 32
COEFW = 18

[tool.dspsim.models]
SomeModel = { parameters = { DW = 24 } }
AnotherModel = { source = "Foo.sv", parameters = { COEFW = 16, BAERR = 22 } }
# ###

[tool.scikit-build]
# Use the package's package config when building.
cmake.args = ["-Ddspsim_DIR=src/dspsim/cmake", "-Wno-dev"]

minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

wheel.packages = ["src/dspsim"]
wheel.py-api = "cp312"


[build-system]
requires = [
    "scikit-build-core>=0.10.7",
    "nanobind>=2.2.0",
    "jinja2>=3.1.4",
    "dataclass-wizard[toml]>=0.29.3",
]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "scikit-build-core>=0.10.7",
    "nanobind>=2.2.0",
    "dataclass-wizard[toml]>=0.29.3",
]
